# ChangeLog for kde-base/artsplugin-mpeglib
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/ChangeLog,v 1.58 2006/11/28 22:23:04 corsair Exp $

  28 Nov 2006; Markus Rothe <corsair@gentoo.org>
  artsplugin-mpeglib-3.5.5.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  -artsplugin-mpeglib-3.5.3.ebuild, -artsplugin-mpeglib-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org>
  artsplugin-mpeglib-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org>
  artsplugin-mpeglib-3.5.5.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  artsplugin-mpeglib-3.5.5.ebuild:
  "Stable x86, bug #147570"

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  artsplugin-mpeglib-3.5.5.ebuild:
  Fix minimum version.

*artsplugin-mpeglib-3.5.5 (03 Oct 2006)

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +artsplugin-mpeglib-3.5.5.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org>
  -artsplugin-mpeglib-3.4.3.ebuild:
  Drop KDE 3.4.

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  artsplugin-mpeglib-3.5.4.ebuild:
  Fix dependencies.

*artsplugin-mpeglib-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +artsplugin-mpeglib-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).

  02 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  artsplugin-mpeglib-3.5.3.ebuild:
  Drop patch, thanks to Keith Kastorff on forums.

  02 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  artsplugin-mpeglib-3.5.3.ebuild:
  Fix patch naming.

*artsplugin-mpeglib-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +artsplugin-mpeglib-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org>
  artsplugin-mpeglib-3.5.2.ebuild: