@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/artsplugin-mpeglib-3.5.5.ebuild,v 1.6 2006/11/28 22:23:04 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/artsplugin-mpeglib-3.5.5.ebuild,v 1.7 2006/12/06 12:28:47 kloeri Exp $
 
 ARTS_REQUIRED="yes"
 KMNAME=kdemultimedia
@@ -10,7 +10,7 @@ KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta eutils
 
 DESCRIPTION="mpeglib plugin for arts"
-KEYWORDS="amd64 ppc ppc64 x86"
+KEYWORDS="alpha amd64 ppc ppc64 x86"
 IUSE=""
 DEPEND="$(deprange 3.5.1 $MAXKDEVER kde-base/mpeglib)"
 
