@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/Attic/kde-i18n-3.5.5.ebuild,v 1.13 2006/11/30 09:34:51 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/Attic/kde-i18n-3.5.5.ebuild,v 1.14 2006/12/06 12:28:04 kloeri Exp $
 
 inherit kde
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.kde.org/"
 LICENSE="GPL-2"
 
 SLOT="${KDEMAJORVER}.${KDEMINORVER}"
-KEYWORDS="~alpha amd64 hppa ~ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 hppa ~ia64 ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE=""
 
 need-kde ${PV}
