@@ -1,12 +1,12 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/Attic/kdeartwork-3.5.5.ebuild,v 1.7 2006/12/03 19:04:24 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/Attic/kdeartwork-3.5.5.ebuild,v 1.8 2006/12/06 12:30:43 kloeri Exp $
 
 inherit kde-dist
 
 DESCRIPTION="KDE artwork package"
 
-KEYWORDS="~alpha amd64 hppa ~ia64 ~mips ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ~ia64 ~mips ppc ppc64 sparc x86"
 IUSE="opengl xscreensaver"
 
 DEPEND="~kde-base/kdebase-${PV}
