@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde-i18n
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/Attic/ChangeLog,v 1.123 2006/11/30 09:34:51 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/Attic/ChangeLog,v 1.124 2006/12/06 12:28:04 kloeri Exp $
+
+  06 Dec 2006; <kloeri@gentoo.org> kde-i18n-3.5.5.ebuild:
+  Stable on Alpha.
 
   30 Nov 2006; Markus Rothe <corsair@gentoo.org> kde-i18n-3.5.5.ebuild:
   Stable on ppc64
