@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/Attic/ChangeLog,v 1.177 2006/12/03 19:04:24 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/Attic/ChangeLog,v 1.178 2006/12/06 12:30:43 kloeri Exp $
+
+  06 Dec 2006; <kloeri@gentoo.org> kdeartwork-3.5.5.ebuild:
+  Stable on Alpha.
 
   03 Dec 2006; Markus Rothe <corsair@gentoo.org> kdeartwork-3.5.5.ebuild:
   Stable on ppc64
