@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/artsplugin-mpeglib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/ChangeLog,v 1.58 2006/11/28 22:23:04 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/ChangeLog,v 1.59 2006/12/06 12:28:47 kloeri Exp $
+
+  06 Dec 2006; <kloeri@gentoo.org> artsplugin-mpeglib-3.5.5.ebuild:
+  Stable on Alpha.
 
   28 Nov 2006; Markus Rothe <corsair@gentoo.org>
   artsplugin-mpeglib-3.5.5.ebuild:
